# ashley

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  UPGRADE.md  docker-compose.yml  renovate.json  setup.cfg
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: Support_question.md
crowdin/: config.yml
env.d/: terraform.dist
env.d/development/: aws.dist  common  postgresql
gitlint/: gitlint_emoji.py
sandbox/: manage.py  settings.py  urls.py  wsgi.py
sandbox/dev_tools/: __init__.py  apps.py  forms.py  urls.py  views.py
sandbox/dev_tools/templates/dev/: consumer.html
src/ashley/: __init__.py  admin.py  apps.py  context_mixins.py  context_processors.py  defaults.py  factories.py  middleware.py  models.py  permissions.py  receivers.py  urls.py  validators.py  views.py  xapi.py
src/ashley/api/: serializers.py  urls.py  views.py
src/ashley/auth/: backend.py  handlers.py
src/ashley/editor/: __init__.py  decorators.py  widgets.py
src/ashley/locale/fr_FR/LC_MESSAGES/: django.mo  django.po
src/ashley/machina_extensions/: __init__.py
src/ashley/machina_extensions/forum/: __init__.py  admin.py  apps.py  factories.py  models.py  urls.py  views.py
src/ashley/machina_extensions/forum/migrations/: 0001_initial.py  0002_auto_20150725_0512.py  0003_remove_forum_is_active.py  0004_auto_20170504_2108.py  0005_auto_20170504_2113.py  0006_auto_20170523_2036.py  0007_auto_20170523_2140.py  0008_forum_last_post.py  0009_auto_20170928_2327.py  0010_auto_20181103_1401.py  0012_auto_20200311_1354.py  0013_lti_contexts_and_lti_id.py  0014_auto_20210215_1542.py  0015_auto_20210217_1351.py  0016_forum_archived.py
src/ashley/machina_extensions/forum_conversation/: __init__.py  apps.py  forms.py  models.py  signals.py  views.py
src/ashley/machina_extensions/forum_moderation/: __init__.py  apps.py  forms.py  views.py
src/ashley/machina_extensions/forum_permission/: __init__.py  admin.py  apps.py  defaults.py  handler.py  middleware.py  models.py
src/ashley/machina_extensions/forum_search/: __init__.py  apps.py  forms.py  search_indexes.py  views.py
src/ashley/management/commands/: sync_group_permissions.py
src/ashley/migrations/: 0001_initial.py  0002_auto_20200325_1651.py  0003_auto_20200917_1335.py  0004_auto_20201214_1750.py  0005_uploadimage.py  0006_lticontext_is_marked_locked.py
src/ashley/permissions/: __init__.py  groups.py
src/ashley/static/ashley/: README.md
src/ashley/static/css/: ashley.css
src/ashley/templates/: base.html  board_base.html
src/ashley/templates/ashley/: board_base.html  change_username.html  manage_moderator.html
src/ashley/templates/forum/: forum_archive.html  forum_detail.html  forum_list.html  forum_lock.html  forum_rename.html  forum_unlock.html  index.html
src/ashley/templates/forum_conversation/: post_create.html  post_update.html  topic_create.html  topic_detail.html  topic_list.html  topic_update.html
src/ashley/templates/forum_search/: post_text.txt  search.html
src/ashley/templates/partials/: breadcrumb.html  pagination.html  user_icon.html
src/ashley/templates/widgets/: editor.html
src/ashley/templatetags/: custom_tags.py
src/frontend/: babel.config  babel.config.js  jest.config.js  package.json  testSetup.ts  tsconfig.json  webpack.config.js
src/frontend/i18n/: compile-translations.js
src/frontend/i18n/locales/: fr.json  fr_FR.json
src/frontend/js/: ashley.ts  index.tsx
src/frontend/js/data/: fetchApi.ts  frontEndData.ts
src/frontend/js/translations/: fr-CA.json
src/frontend/js/types/: Enums.ts  UploadedFile.ts  User.ts  commonDataProps.ts
src/frontend/js/utils/: emojis.ts  highlight.ts  latex.ts
src/frontend/scss/: _main.scss  _mixin.scss  _variables.scss
src/frontend/scss/objects/: _conversation_post_edit.scss  _conversation_topic_detail.scss  _editor.scss  _emojis.scss  _forum_detail.scss  _forum_lists.scss  _member_profile.scss  _mentions.scss  _modal.scss  _moderation.scss  _react-autosuggest.scss  _search.scss  _user_badge.scss
src/fun_lti_provider/: __init__.py  admin.py  apps.py  factories.py  launch_params.py  lti.py  models.py  settings.py  urls.py  validator.py  views.py
src/fun_lti_provider/default/: backend.py  handlers.py
src/fun_lti_provider/migrations/: 0001_initial.py
src/lti_provider/: __init__.py  admin.py  apps.py  defaults.py  exceptions.py  factories.py  launch_params.py  lti.py  models.py  settings.py  urls.py  validator.py  views.py
src/lti_provider/default/: backend.py  handlers.py
src/lti_provider/migrations/: 0001_initial.py
terraform/: cloudfront.tf  output.tf  provider.tf  s3.tf  state.tf.dist  variables.tf
terraform/create_state_bucket/: .terraform.lock.hcl  dynamodb.tf  output.tf  s3.tf  state.tf
tests/ashley/: lti_utils.py  test_admin.py  test_auth_backend.py  test_course_locked.py  test_course_unlocked.py  test_forum_lti_view.py  test_forum_search.py  test_manage_moderators.py  test_middleware.py  test_models_lticontext.py  test_permissions_groups.py  test_receivers.py  test_set_username.py  test_templatetags_custom_tags.py  test_validators.py  test_xapi.py
tests/ashley/api/: test_api_manage_moderators.py  test_api_upload_image.py
tests/ashley/draftjs_exporter/: test_draftjs_exporter_decorator_image.py  test_draftjs_exporter_decorator_latex.py  test_draftjs_exporter_decorator_mention.py  test_draftjs_exporter_renderer.py
tests/ashley/machina_extensions/forum/: test_forum_archive.py  test_forum_manage_moderator.py  test_forum_rename.py  test_forum_view.py  test_index_view.py
tests/ashley/machina_extensions/forum_conversation/: test_forum_conversation.py
tests/ashley/machina_extensions/forum_moderation/: test_forum_moderation.py
tests/ashley/machina_extensions/forum_permission/: test_permission_handler.py  test_permission_middleware.py
tests/ashley/management/commands/: test_sync_group_permissions.py
tests/fun_lti_provider/: test_launch_params.py  test_lti.py
tests/lti_provider/: test_launch_params.py  test_lti.py  test_models.py
upgrades/: 1.0.0-beta.3.py
(+54 files in other folders)
