[metadata]
name = ashley
version = 1.0.0-beta.6
description = A self-hosted discussion forum for learning
long_description = file:README.md
long_description_content_type = text/markdown
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
url = https://github.com/openfun/ashley
license = MIT
keywords = Django, forum, Open edX, message board, discussion
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Framework :: Django :: 1.11
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
include_package_data = True
install_requires =
    boto3==1.16.47
    Django==3.2.4
    django-storages==1.11.1
    django-haystack==3.0
    django-lti-toolbox==1.0.0
    django-machina==1.1.4
    draftjs_exporter==4.1.2
    djangorestframework==3.12.4
    elasticsearch>=5.0.0,<6.0.0 # pyup: >=5.0.0,<6.0.0
    oauthlib>=3.0.0
package_dir =
    =src
packages = find:
zip_safe = True

[options.extras_require]
dev =
    bandit==1.7.0
    black==20.8b1
    flake8==3.9.2
    ipdb==0.13.9
    ipython==7.24.1
    isort==5.8.0
    mypy==0.902
    pyfakefs==4.5.0
    pylint-django==2.4.4
    pylint==2.8.3
    pytest-cov==2.12.1
    pytest-django==4.4.0
    pytest==6.2.4
    lxml==4.6.3
    cssselect==1.1.0

ci =
    twine==3.4.1
sandbox =
    django-configurations==2.2
    dockerflow==2020.10.0
    factory_boy==3.2.0
    gunicorn==20.1.0
    psycopg2-binary==2.8.6
    sentry-sdk==1.1.0

[options.packages.find]
where = src

[wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 99
exclude =
    .git,
    .venv,
    build,
    venv,
    __pycache__,
    node_modules,
    */migrations/*

[isort]
known_ashley=ashley,sandbox
include_trailing_comma=True
line_length=88
multi_line_output=3
use_parentheses=True
sections=FUTURE,STDLIB,THIRDPARTY,ASHLEY,FIRSTPARTY,LOCALFOLDER
skip_glob=src/frontend/node_modules/**/*,venv

[tool:pytest]
addopts = -v --cov-report term-missing
python_files =
    test_*.py
    tests.py
testpaths =
    tests

[mypy]
ignore_missing_imports = True
exclude = src/ashley/static/

[mypy-*.migrations.*]
# Django migrations should not be type checked
ignore_errors = True
