[metadata]
name = ashley
version = 1.3.1
description = A self-hosted discussion forum for learning
long_description = file:README.md
long_description_content_type = text/markdown
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
url = https://github.com/openfun/ashley
license = MIT
keywords = Django, forum, Open edX, message board, discussion
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Framework :: Django :: 1.11
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
include_package_data = True
install_requires =
    boto3==1.34.72
    Django>=5.0.3,<6 # pyup: >=3.2.4,<4
    django-storages==1.14.2
    django-haystack==3.2.1
    django-lti-toolbox==1.2.0
    django-machina==1.3.1
    draftjs_exporter==5.0.0
    djangorestframework==3.15.1
    elasticsearch>=5.0.0,<6.0.0 # pyup: >=5.0.0,<6.0.0
    logging-ldp==0.0.7
    oauthlib>=3.0.0
    tincan==1.0.0
package_dir =
    =src
packages = find:
zip_safe = True

[options.extras_require]
dev =
    bandit==1.7.8
    black==24.3.0
    flake8==7.0.0
    ipdb==0.13.13
    ipython==8.22.2
    isort==5.13.2
    mypy==1.9.0
    pyfakefs==5.3.5
    pylint-django==2.5.5
    pylint==3.1.0
    pytest-cov==5.0.0
    pytest-django==4.8.0
    pytest==8.1.1
    lxml==5.1.0
    cssselect==1.2.0

ci =
    twine==5.0.0
sandbox =
    django-configurations==2.5.1
    dockerflow==2024.3.0
    factory_boy==3.3.0
    gunicorn==21.2.0
    psycopg2-binary==2.9.9
    sentry-sdk==1.44.0

[options.packages.find]
where = src

[wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 99
exclude =
    .git,
    .venv,
    build,
    venv,
    __pycache__,
    node_modules,
    */migrations/*

[isort]
known_ashley=ashley,sandbox
include_trailing_comma=True
line_length=88
multi_line_output=3
use_parentheses=True
sections=FUTURE,STDLIB,THIRDPARTY,ASHLEY,FIRSTPARTY,LOCALFOLDER
skip_glob=src/frontend/node_modules/**/*,venv

[tool:pytest]
addopts = -v --cov-report term-missing
python_files =
    test_*.py
    tests.py
testpaths =
    tests

[mypy]
ignore_missing_imports = True
exclude = src/ashley/static/

[mypy-*.migrations.*]
# Django migrations should not be type checked
ignore_errors = True
