[metadata]
name = ashley
version = 1.3.1
description = A self-hosted discussion forum for learning
long_description = file:README.md
long_description_content_type = text/markdown
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
url = https://github.com/openfun/ashley
license = MIT
keywords = Django, forum, Open edX, message board, discussion
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Framework :: Django :: 1.11
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
include_package_data = True
install_requires =
    boto3==1.35.85
    Django>=5.1.4,<6 # pyup: >=3.2.4,<4
    django-storages==1.14.4
    django-haystack==3.3.0
    django-lti-toolbox==2.0.0
    django-machina==1.3.1
    draftjs_exporter==5.0.0
    djangorestframework==3.15.2
    elasticsearch>=5.0.0,<6.0.0 # pyup: >=5.0.0,<6.0.0
    logging-ldp==0.0.7
    oauthlib>=3.0.0
    tincan==1.0.0
package_dir =
    =src
packages = find:
zip_safe = True

[options.extras_require]
dev =
    bandit==1.8.0
    black==24.10.0
    flake8==7.1.1
    ipdb==0.13.13
    ipython==8.31.0
    isort==5.13.2
    mypy==1.13.0
    pyfakefs==5.7.3
    pylint-django==2.6.1
    pylint==3.3.2
    pytest-cov==6.0.0
    pytest-django==4.9.0
    pytest==8.3.4
    lxml==5.3.0
    cssselect==1.2.0

ci =
    twine==6.0.1
sandbox =
    django-configurations==2.5.1
    dockerflow==2024.4.2
    factory_boy==3.3.1
    gunicorn==23.0.0
    psycopg2-binary==2.9.10
    sentry-sdk==2.19.2

[options.packages.find]
where = src

[wheel]
universal = 1

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 99
exclude =
    .git,
    .venv,
    build,
    venv,
    __pycache__,
    node_modules,
    */migrations/*

[isort]
known_ashley=ashley,sandbox
include_trailing_comma=True
line_length=88
multi_line_output=3
use_parentheses=True
sections=FUTURE,STDLIB,THIRDPARTY,ASHLEY,FIRSTPARTY,LOCALFOLDER
skip_glob=src/frontend/node_modules/**/*,venv

[tool:pytest]
addopts = -v --cov-report term-missing
python_files =
    test_*.py
    tests.py
testpaths =
    tests

[mypy]
ignore_missing_imports = True
exclude = src/ashley/static/

[mypy-*.migrations.*]
# Django migrations should not be type checked
ignore_errors = True
